connect chars list to the api

--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -17,6 +17,10 @@
     width: 180px;
     height: 180px;
     object-fit: cover;
+
+    &[src*='image_not_available'] {
+      object-fit: contain;
+    }
   }
 
   &__info {
