--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -8,17 +8,20 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+
   &__long {
     display: block;
     width: 170px;
     margin: 45px auto 0 auto;
   }
+
   .inner {
     position: relative;
     background-color: $main-color;
     line-height: 18px;
     padding: 0 18px;
     transition: none;
+
     &::before {
       border-color: $main-color transparent;
       border-style: solid;
@@ -30,6 +33,7 @@
       top: -10px;
       transition: none;
     }
+
     &::after {
       border-color: $main-color transparent;
       border-style: solid;
@@ -43,24 +47,29 @@
       transition: none;
     }
   }
+
   &__main, &__secondary {
     &:hover {
       color: #fff;
     }
   }
+
   &__secondary {
     .inner {
       background-color: $grey;
+
       &::before {
         border-color: $grey transparent;
         transition: none;
       }
+
       &::after {
         border-color: $grey transparent;
         transition: none;
       }
     }
   }
+
   &::before {
     content: '';
     display: block;
@@ -69,6 +78,7 @@
     transition: none;
 
   }
+
   &::after {
     content: '';
     display: block;
@@ -77,13 +87,21 @@
     transition: none;
 
   }
+
   &.button__main::before, &.button__main::after {
     background-color: $main-color;
   }
+
   &.button__secondary::before, &.button__secondary::after {
     background-color: $grey;
   }
+
   &:hover {
     transform: translateY(-5px);
   }
+
+  &:disabled {
+    filter: grayscale(0.5);
+  }
+
 }
