--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -15,6 +15,10 @@
       width: 225px;
       height: 345px;
       object-fit: cover;
+
+      &[src*='image_not_available'] {
+        object-fit: contain;
+      }
     }
     &-name {
       margin-top: 10px;
