--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -17,6 +17,24 @@
     cursor: pointer;
     transition: 0.3s transform;
 
+    &-enter {
+      opacity: 0;
+    }
+
+    &-enter-active {
+      opacity: 1;
+      transition: opacity 500ms ease-in;
+    }
+
+    &-exit {
+      opacity: 1;
+    }
+
+    &-exit-active {
+      opacity: 0;
+      transition: opacity 500ms ease-in;
+    }
+
     img {
       width: 200px;
       height: 200px;
